fixed functionality for collapsed nav

--- a/styles/app.css
+++ b/styles/app.css
@@ -54,7 +54,7 @@ p {
 	width: 100%;
 	max-width: 75rem;
 	margin: 0 auto;
-	padding: 0 1rem;
+	padding: 0 2rem;
 }
 
 .nav-container,
@@ -75,11 +75,14 @@ header .container {
 } */
 
 .nav-container {
-	padding-top: 1rem;
-	padding-bottom: 1rem;
+	position: fixed;
+	z-index: 999;
+	background-color: var(--color-bg-primary);
+	padding: 0.75rem 1rem;
 	display: flex;
 	justify-content: flex-start;
 	align-items: flex-end;
+	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
 }
 
 .nav-main {
@@ -254,12 +257,13 @@ header {
 	margin: 2rem 0;
 }
 
-#home {
+.home {
 	height: 100%;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	gap: 5vh;
+	margin-top: min(4rem);
 	padding-top: 2rem;
 	padding-bottom: 2rem;
 }
@@ -307,8 +311,8 @@ header {
 }
 
 .btn-small {
-	padding: 0.5rem 2rem;
-	margin-right: 1rem;
+	padding: 0.5rem 1.5rem;
+	margin-right: 0.25rem;
 	/* font-size: 0.9rem; */
 }
 
@@ -326,6 +330,13 @@ header {
 
 .mb-2 {
 	margin-bottom: 2rem;
+}
+
+a.anchor {
+	display: block;
+	position: relative;
+	top: -2rem;
+	visibility: hidden;
 }
 
 section {
@@ -470,7 +481,7 @@ form input,
 textarea,
 .form-cta {
 	display: block;
-	width: 90%;
+	width: 100%;
 	/* max-width: 75%;
 	min-width: 75%; */
 	margin: 0 auto;
